plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '2.0.1'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'org.beryx.jlink' version '4.1.1'
    id 'com.gradleup.shadow' version '9.0.0'
}

group 'org.kengjer'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.2'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'org.kengjer.applytrack'
    mainClass = 'org.kengjer.applytrack.HelloApplication'

    applicationDefaultJvmArgs = [
            '--enable-native-access=javafx.graphics'
    ]
}

jar {
    manifest {
        attributes(
                'Main-Class': 'org.kengjer.applytrack.Launcher'
        )
    }
}

shadowJar {
    archiveFileName = 'applytrack.jar'
    destinationDirectory.set(file("$projectDir/release"))

    manifest {
        attributes(
                'Main-Class': 'org.kengjer.applytrack.Launcher'
        )
    }
}

javafx {
    version = '25'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testImplementation("org.junit.jupiter:junit-jupiter-params:${junitVersion}")
    testImplementation("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

test {
    useJUnitPlatform()
}

jlink {
    javaHome = System.getenv('JAVA_HOME')
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}
